# modules/liferay-rest/liferay-rest-api/src/main/java/com/code81/tmo/liferay/rest/dto/v1_0/SourcesResponse.java
@@ -1,0 +1,238 @@
+package com.code81.tmo.liferay.rest.dto.v1_0;
+
+import com.fasterxml.jackson.annotation.JsonFilter;
+import com.fasterxml.jackson.annotation.JsonIgnore;
+import com.fasterxml.jackson.annotation.JsonProperty;
+
+import com.liferay.petra.function.UnsafeSupplier;
+import com.liferay.petra.string.StringBundler;
+import com.liferay.portal.kernel.util.StringUtil;
+import com.liferay.portal.vulcan.graphql.annotation.GraphQLField;
+import com.liferay.portal.vulcan.graphql.annotation.GraphQLName;
+import com.liferay.portal.vulcan.util.ObjectMapperUtil;
+
+import java.io.Serializable;
+
+import java.util.Iterator;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Set;
+import java.util.function.Supplier;
+
+import javax.annotation.Generated;
+
+import javax.xml.bind.annotation.XmlRootElement;
+
+/**
+ * @author Mahmoud.Khalil
+ * @generated
+ */
+@Generated("")
+@GraphQLName("SourcesResponse")
+@JsonFilter("Liferay.Vulcan")
+@XmlRootElement(name = "SourcesResponse")
+public class SourcesResponse implements Serializable {
+
+	public static SourcesResponse toDTO(String json) {
+		return ObjectMapperUtil.readValue(SourcesResponse.class, json);
+	}
+
+	public static SourcesResponse unsafeToDTO(String json) {
+		return ObjectMapperUtil.unsafeReadValue(SourcesResponse.class, json);
+	}
+
+	@io.swagger.v3.oas.annotations.media.Schema
+	public String[] getSources() {
+		if (_sourcesSupplier != null) {
+			sources = _sourcesSupplier.get();
+
+			_sourcesSupplier = null;
+		}
+
+		return sources;
+	}
+
+	public void setSources(String[] sources) {
+		this.sources = sources;
+
+		_sourcesSupplier = null;
+	}
+
+	@JsonIgnore
+	public void setSources(
+		UnsafeSupplier<String[], Exception> sourcesUnsafeSupplier) {
+
+		_sourcesSupplier = () -> {
+			try {
+				return sourcesUnsafeSupplier.get();
+			}
+			catch (RuntimeException runtimeException) {
+				throw runtimeException;
+			}
+			catch (Exception exception) {
+				throw new RuntimeException(exception);
+			}
+		};
+	}
+
+	@GraphQLField
+	@JsonProperty(access = JsonProperty.Access.READ_WRITE)
+	protected String[] sources;
+
+	@JsonIgnore
+	private Supplier<String[]> _sourcesSupplier;
+
+	@Override
+	public boolean equals(Object object) {
+		if (this == object) {
+			return true;
+		}
+
+		if (!(object instanceof SourcesResponse)) {
+			return false;
+		}
+
+		SourcesResponse sourcesResponse = (SourcesResponse)object;
+
+		return Objects.equals(toString(), sourcesResponse.toString());
+	}
+
+	@Override
+	public int hashCode() {
+		String string = toString();
+
+		return string.hashCode();
+	}
+
+	public String toString() {
+		StringBundler sb = new StringBundler();
+
+		sb.append("{");
+
+		String[] sources = getSources();
+
+		if (sources != null) {
+			if (sb.length() > 1) {
+				sb.append(", ");
+			}
+
+			sb.append("\"sources\": ");
+
+			sb.append("[");
+
+			for (int i = 0; i < sources.length; i++) {
+				sb.append("\"");
+
+				sb.append(_escape(sources[i]));
+
+				sb.append("\"");
+
+				if ((i + 1) < sources.length) {
+					sb.append(", ");
+				}
+			}
+
+			sb.append("]");
+		}
+
+		sb.append("}");
+
+		return sb.toString();
+	}
+
+	@io.swagger.v3.oas.annotations.media.Schema(
+		accessMode = io.swagger.v3.oas.annotations.media.Schema.AccessMode.READ_ONLY,
+		defaultValue = "com.code81.tmo.liferay.rest.dto.v1_0.SourcesResponse",
+		name = "x-class-name"
+	)
+	public String xClassName;
+
+	private static String _escape(Object object) {
+		return StringUtil.replace(
+			String.valueOf(object), _JSON_ESCAPE_STRINGS[0],
+			_JSON_ESCAPE_STRINGS[1]);
+	}
+
+	private static boolean _isArray(Object value) {
+		if (value == null) {
+			return false;
+		}
+
+		Class<?> clazz = value.getClass();
+
+		return clazz.isArray();
+	}
+
+	private static String _toJSON(Map<String, ?> map) {
+		StringBuilder sb = new StringBuilder("{");
+
+		@SuppressWarnings("unchecked")
+		Set set = map.entrySet();
+
+		@SuppressWarnings("unchecked")
+		Iterator<Map.Entry<String, ?>> iterator = set.iterator();
+
+		while (iterator.hasNext()) {
+			Map.Entry<String, ?> entry = iterator.next();
+
+			sb.append("\"");
+			sb.append(_escape(entry.getKey()));
+			sb.append("\": ");
+
+			Object value = entry.getValue();
+
+			if (_isArray(value)) {
+				sb.append("[");
+
+				Object[] valueArray = (Object[])value;
+
+				for (int i = 0; i < valueArray.length; i++) {
+					if (valueArray[i] instanceof Map) {
+						sb.append(_toJSON((Map<String, ?>)valueArray[i]));
+					}
+					else if (valueArray[i] instanceof String) {
+						sb.append("\"");
+						sb.append(valueArray[i]);
+						sb.append("\"");
+					}
+					else {
+						sb.append(valueArray[i]);
+					}
+
+					if ((i + 1) < valueArray.length) {
+						sb.append(", ");
+					}
+				}
+
+				sb.append("]");
+			}
+			else if (value instanceof Map) {
+				sb.append(_toJSON((Map<String, ?>)value));
+			}
+			else if (value instanceof String) {
+				sb.append("\"");
+				sb.append(_escape(value));
+				sb.append("\"");
+			}
+			else {
+				sb.append(value);
+			}
+
+			if (iterator.hasNext()) {
+				sb.append(", ");
+			}
+		}
+
+		sb.append("}");
+
+		return sb.toString();
+	}
+
+	private static final String[][] _JSON_ESCAPE_STRINGS = {
+		{"\\", "\"", "\b", "\f", "\n", "\r", "\t"},
+		{"\\\\", "\\\"", "\\b", "\\f", "\\n", "\\r", "\\t"}
+	};
+
+	private Map<String, Serializable> _extendedProperties;
+
+}
